# kalendar

./: .gitignore  Cargo.toml  button_daemon.py  display.py  draw.json  draw_cal.py  image.py  inky.py  show_on_inky.py  start.sh  start_daemon.sh  take_screenshot.sh  weather.py
src/: calendar_management.html  form.rs  index.html  main.rs  main_cp.rs  style.css
